--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,24 @@ minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
+# Create
+create_version=0.5.1-f-build.1417+mc1.20.1
+
+# QOL Dev mods
+modmenu_version=7.2.2
+lazydfu_version=0.1.3
+
+# Recipe viewers, Disabled for none
+recipe_viewer = JEI
+jei_version = 15.8.2.23
+rei_version = 12.1.740+fabric
+emi_version = 1.1.10+1.20.1+fabric
+
+# Sodium
+sodium = true
+
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.0.1
 maven_group=com.azasad.createcolored
 archives_base_name=create-colored
 
