Before updating mappings

--- a/build.gradle
+++ b/build.gradle
@@ -34,15 +34,15 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// Create - dependencies are added transitively
-	modImplementation("com.simibubi.create:create-fabric-${minecraft_version}:${create_version}")
-
 	// Development QOL
-	if(sodium == true)
+	if(sodium)
 	{
 		modLocalRuntime("maven.modrinth:indium:1.0.34+mc1.20.1")
 		modLocalRuntime("maven.modrinth:sodium:mc1.20.1-0.5.11")
 	}
+
+	// Create - dependencies are added transitively
+	modImplementation("com.simibubi.create:create-fabric-${minecraft_version}:${create_version}")
 
 	modLocalRuntime("maven.modrinth:lazydfu:${lazydfu_version}")
 	modLocalRuntime("com.terraformersmc:modmenu:${modmenu_version}")
