--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
+# Fabric Api
+fabric_version=0.92.2+1.20.1
+
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
@@ -29,5 +31,3 @@ mod_version=0.0.1
 maven_group=com.azasad.createcolored
 archives_base_name=create-colored
 
-# Dependencies
-fabric_version=0.92.2+1.20.1
