Fixed crash on servers due to bad registration of blocks

--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,11 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Development QOL
-	if(sodium)
-	{
-		modLocalRuntime("maven.modrinth:indium:1.0.34+mc1.20.1")
-		modLocalRuntime("maven.modrinth:sodium:mc1.20.1-0.5.11")
-	}
+//	if(sodium)
+//	{
+//		modLocalRuntime("maven.modrinth:indium:1.0.34+mc1.20.1")
+//		modLocalRuntime("maven.modrinth:sodium:mc1.20.1-0.5.11")
+//	}
 
 	// Create - dependencies are added transitively
 	modImplementation("com.simibubi.create:create-fabric-${minecraft_version}:${create_version}")
