--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@ plugins {
 	id 'maven-publish'
 }
 
-version = project.mod_version
+version = "${mod_version}+${minecraft_version}"
 group = project.maven_group
 
 base {
 	archivesName = project.archives_base_name
 }
+
 
 repositories {
 	maven { url = "https://maven.shedaniel.me/" } // Cloth Config, REI
