feat: Added support for 0.5.1-j-build.1631+1.20.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
 # Create
-create_version=0.5.1-f-build.1417+mc1.20.1
+create_version=0.5.1-j-build.1631+mc1.20.1
 
 # QOL Dev mods
 modmenu_version=7.2.2
