fixed some of the files

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,33 +1,56 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.daemon=true
 org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
 
-# Fabric Api
-fabric_version=0.92.2+1.20.1
+#Minecraft and Mappings
+minecraft_version=1.21.1
+minecraft_version_range=[1.21.1,1.22)
+parchment_minecraft_version=1.21.1
+parchment_mappings_version=2024.11.17
 
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.15.11
+neo_version=21.1.169
+neo_version_range=[21.1.169,)
+loader_version_range=[1,)
 
-# Create
-create_version=0.5.1-j-build.1631+mc1.20.1
+#Common Properties
+#One boolean for both fabric and forge
+doDryRun=false
+mixin_extras_version=0.4.1
+jei_common_version=19.21.0.247
+emi_common_version=1.1.22
+sodium_curse_id=6382651
+diagonal_mods_version=8.0.5
+ponder_version=1.0.46
 
-# QOL Dev mods
-modmenu_version=7.2.2
-lazydfu_version=0.1.3
+#NeoForge Properties
+create_version=6.0.4-73
+create_range=[6.0.0,)
+flywheel_minecraft_version=1.21.1
+flywheel_version=1.0.2
+registrate_version = MC1.21-1.3.0+62
 
 # Recipe viewers, Disabled for none
-recipe_viewer = JEI
+recipe_viewer = Disabled
 jei_version = 15.8.2.23
 rei_version = 12.1.740+fabric
 emi_version = 1.1.10+1.20.1+fabric
 
-# Sodium
-sodium = true
-
 # Mod Properties
-mod_version=1.1.2
-maven_group=com.azasad.createcolored
-archives_base_name=create-colored
+mod_version=1.1.3
+maven_group=com.troller2705.createcolored
+mod_id=createcolored
+# The human-readable display name for the mod.
+mod_name=AntiItemLag
+# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
+mod_license=All Rights Reserved
+# The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
+# This should match the base package used for the mod sources.
+# See https://maven.apache.org/guides/mini/guide-naming-conventions.html
+mod_group_id=com.troller2705.createcolored
+# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
+mod_authors=Troller2705
+# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
+mod_description=Provides 16 colors of pipe and tanks that don't interconnect
 
