Some more fixes

--- a/gradle.properties
+++ b/gradle.properties
@@ -50,7 +50,7 @@ mod_license=All Rights Reserved
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=com.troller2705.createcolored
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=Troller2705
+mod_authors=Troller2705, ThermalCube
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Provides 16 colors of pipe and tanks that don't interconnect
 
