--- a/gradle.properties
+++ b/gradle.properties
@@ -26,23 +26,23 @@ ponder_version=1.0.46
 
 #NeoForge Properties
 create_version=6.0.4-73
-create_range=[6.0.0,)
+create_range=[6.0.4,6.1.0)
 flywheel_minecraft_version=1.21.1
 flywheel_version=1.0.2
-registrate_version = MC1.21-1.3.0+62
+registrate_version=MC1.21-1.3.0+62
 
 # Recipe viewers, Disabled for none
-recipe_viewer = Disabled
-jei_version = 15.8.2.23
-rei_version = 12.1.740+fabric
-emi_version = 1.1.10+1.20.1+fabric
+recipe_viewer=Disabled
+jei_version=15.8.2.23
+rei_version=12.1.740+fabric
+emi_version=1.1.10+1.20.1+fabric
 
 # Mod Properties
 mod_version=1.1.3
 maven_group=com.troller2705.createcolored
-mod_id=createcolored
+mod_id=create_colored
 # The human-readable display name for the mod.
-mod_name=AntiItemLag
+mod_name=Create: Colored
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
